# FaceGenBaseLibrary

./: .gitignore  DOCS.html  LICENSE.txt  README.md  android_cmake_example.txt  compile.html  index.html  quick.html  vim.exe.stackdump
android/fgbl/app/: .gitignore  CMakeLists.txt  build.gradle
source/: CMakeLists.txt  Makefile.osx.clang.64.debug  Makefile.osx.clang.64.release  Makefile.osx.gcc.64.debug  Makefile.osx.gcc.64.release  Makefile.ubuntu.clang.64.debug  Makefile.ubuntu.clang.64.release  Makefile.ubuntu.gcc.64.debug  Makefile.ubuntu.gcc.64.release  Makefile.ubuntu.icpc.64.debug  Makefile.ubuntu.icpc.64.release  Makefile_android  Makefile_android_arm64-v8a_clang_release  Makefile_android_arm64_clang_release  Makefile_android_arm8_0_clang_release  Makefile_android_armeabi-v7a_clang_release  Makefile_android_armv7-a_clang_release  Makefile_android_armv7_clang_release  Makefile_android_x64_clang_release  Makefile_android_x86_64_clang_release  Makefile_android_x86_clang_release  Makefile_ios  Makefile_ios_arm64_clang_release  Makefile_ios_arm64e_clang_release  Makefile_ios_arm8_0_clang_release  Makefile_ios_arm8_3_clang_release  Makefile_ios_armv7_clang_release  Makefile_ios_x64_clang_release  Makefile_linux_arm8_2_gcc_debug  Makefile_linux_arm8_2_gcc_release  Makefile_linux_arm8_clang_debug  Makefile_linux_arm8_clang_release  Makefile_linux_arm8_gcc_debug  Makefile_linux_arm8_gcc_release  Makefile_linux_arm8_icpc_debug  Makefile_linux_arm8_icpc_release  Makefile_linux_x64_clang_debug  Makefile_linux_x64_clang_release  Makefile_linux_x64_gcc_debug  Makefile_linux_x64_gcc_release  (+14 more)
source/LibFgBase/: CMakeLists.txt  FgSystemInfo.cpp  LICENSE.txt
source/LibFgBase/VisualStudio08/: LibFgBase.vcproj
source/LibFgBase/VisualStudio10/: LibFgBase.vcxproj
source/LibFgBase/VisualStudio12/: LibFgBase.vcxproj
source/LibFgBase/VisualStudio13/: LibFgBase.vcxproj
source/LibFgBase/VisualStudio15/: LibFgBase.vcxproj
source/LibFgBase/VisualStudio17/: LibFgBase.vcxproj
source/LibFgBase/VisualStudio19/: LibFgBase.vcxproj
source/LibFgBase/VisualStudio22/: LibFgBase.vcxproj
source/LibFgBase/src/: Fg3dCamera.cpp  Fg3dCamera.hpp  Fg3dDisplay.cpp  Fg3dDisplay.hpp  Fg3dMesh.cpp  Fg3dMesh.hpp  Fg3dMesh3ds.cpp  Fg3dMeshDae.cpp  Fg3dMeshFbx.cpp  Fg3dMeshFgmesh.cpp  Fg3dMeshIo.cpp  Fg3dMeshIo.hpp  Fg3dMeshLegacy.cpp  Fg3dMeshLegacy.hpp  Fg3dMeshLwo.cpp  Fg3dMeshMa.cpp  Fg3dMeshObj.cpp  Fg3dMeshOps.cpp  Fg3dMeshOps.hpp  Fg3dMeshPly.cpp  Fg3dMeshStl.cpp  Fg3dMeshTri.cpp  Fg3dMeshVrml.cpp  Fg3dMeshXsi.cpp  Fg3dNormals.cpp  Fg3dNormals.hpp  Fg3dOpenGL.hpp  Fg3dOpenGLImpl.hpp  Fg3dPose.cpp  Fg3dPose.hpp  Fg3dRayCaster.cpp  Fg3dRayCaster.hpp  Fg3dRenderOptions.hpp  Fg3dSurface.cpp  Fg3dSurface.hpp  Fg3dTest.cpp  Fg3dTopology.cpp  Fg3dTopology.hpp  FgAffine.cpp  FgAffine.hpp  (+264 more)
source/LibFgNix/: CMakeLists.txt  Fg3dOpenGLImpNix.cpp  FgClNix.cpp  FgFileSystemNix.cpp  FgGuiNix.cpp  FgStdioNix.cpp  FgSystemInfoNix.cpp  FgTcpNix.cpp  FgThreadNix.cpp  FgTimeNix.cpp  LICENSE.txt  stdafx.cpp  stdafx.h
source/LibFgWin/: CMakeLists.txt  DX.hpp  Fg3dOpenGLImpWin.cpp  FgClWin.cpp  FgClusterWin.cpp  FgConioWin.cpp  FgDirect3D.cpp  FgDirect3D.hpp  FgFileSystemWin.cpp  FgFileWin.cpp  FgGaWin.cpp  FgGui3dWin.cpp  FgGuiWin.cpp  FgGuiWin.hpp  FgGuiWin3dOgl.cpp  FgGuiWinButton.cpp  FgGuiWinCheckbox.cpp  FgGuiWinDialogs.cpp  FgGuiWinDynamic.cpp  FgGuiWinGroupbox.cpp  FgGuiWinImage.cpp  FgGuiWinRadio.cpp  FgGuiWinSelect.cpp  FgGuiWinSlider.cpp  FgGuiWinSpacer.cpp  FgGuiWinSplit.cpp  FgGuiWinSplitAdj.cpp  FgGuiWinSplitScroll.cpp  FgGuiWinTabs.cpp  FgGuiWinText.cpp  FgGuiWinTextEdit.cpp  FgGuiWinTextRich.cpp  FgStdStreamWin.cpp  FgStdioWin.cpp  FgSystemInfo.cpp  FgSystemInfoWin.cpp  FgSystemWin.cpp  FgTcpWin.cpp  FgThread.cpp  FgThrowWindows.cpp  (+6 more)
source/LibFgWin/VisualStudio08/: LibFgWin.vcproj
source/LibFgWin/VisualStudio10/: LibFgWin.vcxproj
source/LibFgWin/VisualStudio12/: LibFgWin.vcxproj
source/LibFgWin/VisualStudio13/: LibFgWin.vcxproj
source/LibFgWin/VisualStudio15/: LibFgWin.vcxproj
source/LibFgWin/VisualStudio17/: LibFgWin.vcxproj
source/LibFgWin/VisualStudio19/: LibFgWin.vcxproj  dx11_transparent.hlsl
source/LibFgWin/VisualStudio22/: LibFgWin.vcxproj
source/LibImageMagickCore/: CMakeLists.txt
source/LibImageMagickCore/ImageMagick-6.6.2/: index.html
source/LibImageMagickCore/VisualStudio08/: LibImageMagickCore.vcproj
source/LibImageMagickCore/VisualStudio10/: LibImageMagickCore.vcxproj
source/LibImageMagickCore/VisualStudio12/: LibImageMagickCore.vcxproj
source/LibImageMagickCore/VisualStudio13/: LibImageMagickCore.vcxproj
source/LibImageMagickCore/VisualStudio15/: LibImageMagickCore.vcxproj
source/LibImageMagickCore/VisualStudio17/: LibImageMagickCore.vcxproj
source/LibJpegIjg6b/: CMakeLists.txt  jcdctmgr.c  jconfig.h  jddctmgr.c  jmorecfg.h
source/LibJpegIjg6b/VisualStudio08/: LibJpegIjg6b.vcproj
source/LibJpegIjg6b/VisualStudio10/: LibJpegIjg6b.vcxproj
source/LibJpegIjg6b/VisualStudio12/: LibJpegIjg6b.vcxproj
source/LibJpegIjg6b/VisualStudio13/: LibJpegIjg6b.vcxproj
source/LibJpegIjg6b/VisualStudio15/: LibJpegIjg6b.vcxproj
source/LibJpegIjg6b/VisualStudio17/: LibJpegIjg6b.vcxproj
source/LibJpegIjg6b/VisualStudio19/: LibJpegIjg6b.vcxproj
source/LibTntJama/: CMakeLists.txt  jama_eig.h  jama_lu.h  tnt.h  tnt_array1d.h  tnt_fortran_array1d.h  tnt_math_utils.h  tnt_vec.h
source/LibTpBoost/: CMakeLists.txt
source/LibTpBoost/VisualStudio08/: LibTpBoost.vcproj
source/LibTpBoost/VisualStudio10/: LibTpBoost.vcxproj
source/LibTpBoost/VisualStudio12/: LibTpBoost.vcxproj
source/LibTpBoost/VisualStudio13/: LibTpBoost.vcxproj
source/LibTpBoost/VisualStudio15/: LibTpBoost.vcxproj
source/LibTpBoost/VisualStudio17/: LibTpBoost.vcxproj
source/LibTpBoost/VisualStudio19/: LibTpBoost.vcxproj
source/LibTpBoost/VisualStudio22/: LibTpBoost.vcxproj
source/LibTpDlib/VisualStudio19/: LibTpDlib.vcxproj
source/LibTpEigen/: CMakeLists.txt
source/LibTpStb/: CMakeLists.txt
source/LibUTF-8/: CMakeLists.txt
source/fgbl/: CMakeLists.txt  LICENSE.txt  fgbl.cpp
(+433 files in other folders)
